added custom icon

--- a/slabs-config.json
+++ b/slabs-config.json
@@ -3,6 +3,7 @@
   "type" : "source",
   "connectionsIn" : 1,
   "connectionsOut" : 3,
+  "customIcon" : "fa-sun-o",
   "schema" : {
     "type": "object",
     "properties" : {
